# RTRC

./: CMakeLists.txt
App/: main.cpp  static_memory_rtos.c
App/Include/: atomic.hpp  memory.hpp  task.hpp
Config/: FreeRTOSConfig.h
